# classics

./: Cargo.toml  README.md  TODO.md
benches/: monoalphabetic_bench.rs  scytale_bench.rs  shakespeare_henry5.txt  shift_bench.rs  solitaire_bench.rs  vigenere_bench.rs
src/: lib.rs  main.rs  opts.rs
src/ciphers/: card_deck.rs  mod.rs  monoalphabetic.rs  scytale.rs  shift.rs  solitaire.rs  utils.rs  vigenere.rs
src/ciphers/solitaire/: card_deck.rs  mod.rs  solitaire.rs
tests/: common.rs  integration_test.rs
